# ELFRelocs.py

./: .gitlab-ci.yml  ReadMe.md  setup.cfg  setup.py
ELFRelocs/: __init__.py  relocEnums.py
ELFRelocs/libs/: LIEF.py
