[metadata]
name = ELFRelocs
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/ELFRelocs.py
description = a module to calculate relocated addresses for pointers in ELF binaries
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = ELF, relocation
license = Unlicense
license_file = UNLICENSE
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = True
packages = ELFRelocs, ELFRelocs.libs
setup_requires = setuptools_scm
test_suite = tests.tests.Tests
install_requires =
	 ELFMachine @ https://gitlab.com/KOLANICH/ELFMachine.py/-/jobs/artifacts/master/raw/wheels/ELFMachine-0.CI-py3-none-any.whl?job=build


[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
